  history has been reached.  It also specifies that the forward execution can
  continue, and the recording will also continue.

* The Ada 'Object_Size attribute is now supported.

* Support for process record/replay and reverse debugging on loongarch*-linux*
  targets has been added.

* New bash script gstack uses GDB to print stack traces of running processes.

* Python API

  ** Added gdb.record.clear.  Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

  ** Added the new event source gdb.tui_enabled.

  ** New module gdb.missing_objfile that facilitates dealing with
     missing objfiles when opening a core-file.

  ** New function gdb.missing_objfile.register_handler that can
     register an instance of a sub-class of
     gdb.missing_debug.MissingObjfileHandler as a handler for missing
     objfiles.

  ** New class gdb.missing_objfile.MissingObjfileHandler which can be
     sub-classed to create handlers for missing objfiles.

  ** The 'signed' argument to gdb.Architecture.integer_type() will no
     longer accept non-bool types.

  ** The gdb.MICommand.installed property can only be set to True or
     False.

  ** The 'qualified' argument to gdb.Breakpoint constructor will no
     longer accept non-bool types.

  ** Added the gdb.Symbol.is_artificial attribute.

  ** Added gdb.Block.subblocks.  Returns a list of blocks contained in that
     block.

  ** Added gdb.Symbol.domain.  Contains the domain of the symbol.

  ** Added gdb.Architecture.void_type. Returns a gdb.Type representing "void"
     type for that architecture.

  ** When assigning a sequence to gdb.Inferior.arguments, only quote
     and whitespace characters will be escaped.  Everything else will
     be left unmodified.

* Debugger Adapter Protocol changes

  ** The "scopes" request will now return a scope holding global
     variables from the stack frame's compilation unit.
